# kulta

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  skaffold.yaml  sykli.rs
.github/workflows/: sykli-ci.yml
.kulta/: occurrence.json
deploy/: controller.yaml  crd.yaml  rbac.yaml  validating-webhook.yaml
src/: lib.rs  main.rs  main_test.rs
src/controller/: advisor.rs  cdevents.rs  cdevents_test.rs  clock.rs  mod.rs  occurrence.rs  prometheus.rs  prometheus_ab.rs  rollout.rs  rollout_test.rs
src/controller/rollout/: reconcile.rs  replicaset.rs  status.rs  traffic.rs  validation.rs
src/controller/strategies/: ab_testing.rs  blue_green.rs  canary.rs  mod.rs  simple.rs
src/crd/: conversion.rs  conversion_test.rs  mod.rs  rollout.rs  rollout_test.rs  v1alpha1.rs  v1beta1.rs
src/server/: health.rs  health_test.rs  leader.rs  leader_test.rs  metrics_test.rs  mod.rs  shutdown.rs  shutdown_test.rs  tls.rs  tls_test.rs  webhook.rs  webhook_test.rs
tests/: seppo_integration_test.rs  stress_test.rs
tests/integration/: config.toml
tests/integration/framework/: k8s.rs  metrics.rs  mod.rs
