[package]
name = "kulta"
version = "0.1.0"
edition = "2021"

[dependencies]
# Kubernetes client and controller runtime
kube = { version = "2.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.26", features = ["v1_30"] }

# Gateway API types
# NOTE: Updated to 0.19 for compatibility with kube 2.0 + k8s-openapi 0.26
gateway-api = "0.19"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Date/time for RFC3339 parsing
chrono = { version = "0.4", features = ["serde"] }

# CDEvents observability
cdevents-sdk = { version = "0.2.0", features = ["cloudevents"] }
cloudevents-sdk = { version = "0.8", default-features = false }
uuid = { version = "1", features = ["v4"] }

# HTTP client for CDEvents emission
# Using rustls-tls which uses ring as the crypto backend to match our direct rustls dependency
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# HTTP server for health endpoints
axum = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"

# TLS certificate generation
rcgen = "0.13"
base64 = "0.22"
pem = "3"
time = "0.3"

# Async trait support for strategy pattern
async-trait = "0.1"

# Prometheus metrics
prometheus = "0.13"

# FALSE Protocol occurrence types
false-protocol = { path = "../false-protocol/rust" }

[dev-dependencies]
serde_yaml = "0.9"
x509-parser = "0.17"
pem = "3"

# Integration test dependencies
toml = "0.8"

# Kubernetes testing framework
seppo = "0.1"

# CI pipeline definition
[dependencies.sykli]
version = "0.3"
optional = true

[[bin]]
name = "sykli"
path = "sykli.rs"
required-features = ["sykli"]

[features]
default = []
